# MedicalAssistantBot

./: .gitignore  0 - eda.ipynb  1 - modeling.ipynb  2 - evaluation.ipynb  README.md  _base_test_res  main.py  pyproject.toml
evaluation/: eval_df.csv
src/: helper.py  llm_helper.py
