[project]
name = "medicalassistantbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "quickumls>=1.4.2",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "wandb>=0.21.1",
]
